Aligned items with the correct spacing.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,36 @@
+.image-container{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 100px;
+  align-items: center;
+}
+
+.text-container{
+  display: flex;
+  word-wrap: normal;
+  text-align: center;
+  justify-content: space-between;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
 }
 
 img {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
 
 .title {
-  font-size: 36px;
+  display: flex;
+  justify-content: center;
+  font-size: 52px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
